welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: illegal start of simple expression
  var nbrs:List = [a, b, c, d]
                  ^